objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Order__c</fullName>
        <label>Date of Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GST_INN__c</fullName>
        <label>GST INN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Productt__c</fullName>
        <label>Productt</label>
        <referenceTo>Productt__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF(Productt__r.Cost_of_Product__c * Quantity__c * 1.18&gt;500, Productt__r.Cost_of_Product__c * Quantity__c * 1.18, Productt__r.Cost_of_Product__c * Quantity__c * 1.18+90 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_order_date_prior_to_current_date</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Order__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_Order__c</errorDisplayField>
        <errorMessage>Date of order must not be prior to current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Once_Delivered_status_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Status__c ),
 OR(
     ISPICKVAL( PRIORVALUE( Status__c ),&quot;Delivered&quot; ),
     ISPICKVAL( PRIORVALUE( Status__c ),&quot;Delivered&quot; )
   )  
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The order is Already Delivered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_must_be_of_10_digit</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(REGEX( Phone__c , &quot; ^[0-9]{10}&quot;)))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>It should be a number of 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TP_exceed_2000_populate_GST_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Total_Price__c &gt;2000,  ISNULL(GST_INN__c) )</errorConditionFormula>
        <errorMessage>Total price exceeds Rs. 2000, user must
populate the GST number</errorMessage>
    </validationRules>
</CustomObject>